Add Job.js & Jobs.js classes

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -26,6 +26,9 @@
             .text-secondary {
                 padding-bottom: 1rem;
             }
+            p {
+                text-align: left;
+            }
         }
     }
 
