--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,28 +1,31 @@
 /* HOME SECTION 
 -----------------------------*/
 .contact {
-    height: 100%;
-    padding-top: 40vh;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: linear-gradient(to right rgba($primary-color, 0.9), rgba($secondary-color, 0.1)),
-        url(../img/fola.jpg) no-repeat center top/cover;
+  height: 100%;
+  padding-top: 40vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: linear-gradient(
+      150deg,
+      rgba(230, 100, 101, 0.4),
+      rgba(145, 152, 229, 0.4)
+    ),
+    url(../img/fola.jpg) no-repeat center top/cover;
 
-    h2 {
-        font-size: 3rem;
-        margin-bottom: 2rem;
-    }
-    &__list {
-        width: 80vw;
-        margin: 0 auto;
-        display: grid;
-        /* Partially responsive fallback */
-        grid-template-columns: repeat(auto-fit, minmax(calc(7.5rem + 10%), 1fr));
-        /* Fully responsive version */
-        grid-template-columns: repeat(auto-fit, minmax(calc(min(10rem, 100%)), 1fr));
-        grid-gap: 2rem;
-        font-size: 1.5rem;
-    }
+  h2 {
+    font-size: 3rem;
+    margin-bottom: 5%;
+  }
+  &__list {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+    font-size: 1.5rem;
+  }
+  .social-icons {
+    position: initial;
+    margin-top: 10%;
+  }
 }
