--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,7 +1,6 @@
-@include break-point(45em) {
-
 /* NAV
 ----------------------------------------*/
+@include break-point-min(45em) {
     .menu-btn {
         display: none;
     }
@@ -28,20 +27,21 @@
                 font-weight: 300;
                 padding-bottom: 1rem;
                 &::before {
-                    content: '';
+                    content: "";
                     position: absolute;
                     bottom: 0;
                     width: 100%;
-                    height: 3.2em;
+                    height: 0.1em;
+                    border-top-right-radius: 50%;
                     transform: scaleX(0);
+                    transform-origin: 0% 50%;
                     @include transition-ease;
                 }
                 &:hover {
-                    transform: scaleY(.8);
                     color: set-text-color($primary-color);
                     &::before {
                         transform: scaleX(1);
-                        background: rgba($secondary-color, .3);
+                        background: rgba($secondary-color, 1);
                     }
                 }
             }
@@ -57,7 +57,7 @@
 /* PROJECTS
 ----------------------------------------*/
 .projects {
-    @include break-point(35em) {
+    @include break-point-min(35em) {
         &__bio-image {
             height: 40vh;
         }
@@ -76,7 +76,7 @@
         }
     }
 
-    @include break-point(60em) {
+    @include break-point-min(60em) {
         &__items {
             width: 70vw;
             grid-template-columns: 1fr minmax(auto, 20em) 1fr;
@@ -105,6 +105,54 @@
         }
     }
 }
+
 /* CONTACT
 ----------------------------------------*/
+.contact {
+    @include break-point-min(47em) {
+        &__list {
+            width: 80%;
+            margin: 0 auto;
+            grid-template-columns: repeat(2, minmax(0, 1fr));
+        }
+        &__list > * {
+            justify-self: flex-end;
+        }
+        &__email {
+            padding-right: 2.5rem;
+        }
+    }
+    @include break-point-min(70em) {
+        &__list {
+            grid-template-columns: repeat(3, minmax(0, 1fr));
+        }
+        &__list > * {
+            justify-self: unset;
+        }
+        &__email {
+            padding-right: 0;
+        }
+    }
+    @include break-point-max(22.5em) {
+        h2 {
+            font-size: 2rem;
+        }
+        &__list {
+            font-size: 1rem;
+        }
+        .social-icons {
+            font-size: 0.6rem;
+        }
+    }
+}
 
+/* HOME
+----------------------------------------*/
+@include break-point-max(22.5em) {
+    .home {
+        .social-icons,
+        footer {
+            font-size: 0.6rem;
+        }
+    }
+}
