--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,20 +1,21 @@
-@import 'config';
-@import 'home';
-@import 'menu';
-@import 'about';
-@import 'projects';
-@import 'contact';
-@import 'responsive';
-
+@import "config";
+@import "home";
+@import "menu";
+@import "about";
+@import "projects";
+@import "contact";
+@import "responsive";
 
 body {
     background: $primary-color;
     color: set-text-color($primary-color);
     height: 100vh;
     line-height: 1;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-weight: 400;
 }
 
@@ -41,8 +42,8 @@ main {
         position: fixed;
         left: 0;
         bottom: 1rem;
-        
-        >a {
+
+        > a {
             padding: 0.4rem;
             @include transition-ease;
 
@@ -55,7 +56,7 @@ main {
 
 footer {
     position: fixed;
-    bottom: .0rem;
+    bottom: 0rem;
     right: 1rem;
     text-align: right;
     padding: 1rem;
