--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -36,7 +36,7 @@
         width: 60vw;
         display: grid;
         grid-template-columns: 1fr;
-        grid-gap: 2rem;
+        gap: 2rem;
         margin: 2rem auto 0;
 
         &__job {
@@ -51,8 +51,9 @@
             h6 {
                 margin: 0.3rem 0;
             }
+            
             p {
-                font-size: .9rem;
+                font-size: 0.9rem;
             }
         }
     }
