--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,33 +1,40 @@
 /* HOME SECTION 
 -----------------------------*/
-.home {
-  height: 100%;
-  padding-top: 40vh;
-  overflow: hidden;
-  text-align: center;
-  background: linear-gradient(
-      150deg,
-      rgba(230, 100, 101, 0.4),
-      rgba(145, 152, 229, 0.4)
-    ),
-    url(../img/fola.jpg) no-repeat center top/cover;
-
-  & > h2:first-child {
-    font-size: 1em;
-  }
-  & > h2:last-of-type {
-    font-size: 1.2em;
-  }
-
-  &__name {
-    font-size: 3.5rem;
-    margin-bottom: 1rem;
-    padding-bottom: 1rem;
-    border-bottom: 2px solid set-text-color($primary-color);
-
-    &--last {
-      color: $secondary-color;
-      font-weight: 700;
+.home{
+    transition: all 0.5s 0.3s ease-in-out;
+    height: 100%;
+    padding-top: 40vh;
+    overflow: hidden;
+    text-align: center;
+    background: linear-gradient(
+        150deg,
+        rgba(255, 201, 7, .3),
+        rgba(22, 141, 226, .4)
+      ),
+      url(../img/fola.webp) no-repeat center top/cover;
+  
+    & > h2:first-child {
+      font-size: 1em;
+      margin-block-end: 1rem;
     }
-  }
+    & > h2:last-of-type {
+      font-size: 1.2em;
+    }
+  
+    &__name {
+      font-size: 3.5rem;
+      margin-bottom: 1rem;
+      padding-bottom: 1rem;
+      border-bottom: 2px solid set-text-color($primary-color);
+  
+      &--last {
+        color: $secondary-color;
+        font-weight: 700;
+      }
+    }
+    .social-icons{
+      inset-block-end: 1rem;
+    }
+  
 }
+
