--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -2,42 +2,44 @@
 ----------------------------------- */
 .menu-btn {
   position: absolute;
-  top: 1rem;
-  right: 1rem;
+  inset-block-start: 1rem;
+  inset-inline-start: 1rem;
   z-index: 1;
-  height: 20px;
-  width: 28px;
+  block-size: 20px;
+  inline-size: 28px;
   color: set-text-color($primary-color);
   cursor: pointer;
   @include transition-ease;
 
   &__burger {
     position: absolute;
-    right: 0;
-    top: 0.5rem;
-    width: 28px;
-    height: 3px;
+    inset-inline-start: 0;
+    inset-block-start: 0.5rem;
+    inline-size: 28px;
+    block-size: 3px;
     background-color: set-text-color($primary-color);
     @include transition-ease;
 
     &::before {
       position: inherit;
       content: "";
-      top: -8px;
-      width: inherit;
-      height: 3px;
+      inset-block-start: -8px;
+      inline-size: inherit;
+      block-size: 3px;
       background: set-text-color($primary-color);
       @include transition-ease;
     }
+
     &::after {
       position: inherit;
       content: "";
-      top: 8px;
-      width: 20px;
-      height: 3px;
+      inset-block-start: 8px;
+      inline-size: 20px;
+      block-size: 3px;
       background: set-text-color($primary-color);
       @include transition-ease;
     }
+
     &.open {
       background: transparent; // you can't use opacity or visibility here
       transform: rotate(720deg);
@@ -46,62 +48,78 @@
         transform: rotate(45deg) translate(5px, 8px);
       }
       &::after {
-        width: inherit;
+        inline-size: inherit;
         transform: rotate(-45deg) translate(3px, -7px);
       }
     }
   }
 }
+.logo{
+  position: absolute;
+  inset-block-start: 1rem;
+  inset-inline-end: 1rem;
+  block-size: 20px;
+  inline-size: 28px;
+  img {
+    inline-size: 100%;
+  }
+}
+
 /* THE NAVIGATION MENU
 -----------------------------------------*/
 .nav {
   visibility: hidden;
   opacity: 0.9;
-  width: 100vw;
+  inline-size: 100vw;
   position: fixed;
-  top: 0;
-  left: 0;
+  inset-block-start: 0;
+  inset-inline-start: 0;
 
   &.open {
     visibility: visible;
   }
-
+ 
   .menu-nav {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    justify-content: start;
+    align-items: normal;
+    // inline-size: 50vh;
+    block-size: 100vh;
     padding-right: 1rem;
     list-style-type: none;
     background: $primary-color;
-    overflow: hidden;
+    overflow: visible;
     text-transform: uppercase;
     color: set-text-color($primary-color);
-    transform: translateY(-100%);
+    transform: translateX(-100%);
     @include transition-ease;
 
     &.open {
-      transform: translateY(0);
+      transform: translateX(-50%);
     }
 
     &__item {
-      transform: translateX(100vw);
+      display: inline-block;
+      transform: translateX(-100vw);
       @include transition-ease;
-
+      
       &.open {
-        transform: translateX(0);
+        transform: translateX(70%);
       }
       &.active > a {
         color: $secondary-color;
+      }
+      &:first-child{
+        margin-block-start: 5rem;
       }
     }
 
     &__link {
       display: inline-block;
       padding: 2rem 0;
-      font-size: 2rem;
+      font-size: 1.3rem;
       font-weight: 300;
       @include transition-ease;
 
