--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2&display=swap');
 @import "config";
 @import "home";
 @import "menu";
@@ -11,7 +12,7 @@ body {
     color: set-text-color($primary-color);
     height: 100vh;
     line-height: 1;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Baloo Tammudu 2', cursive, sans-serif;
 }
 h1,
 h2,
@@ -36,20 +37,30 @@ header {
 
 main {
     height: 100%;
-    width: 100%;
+    width: 100%;    
+}
 
-    .social-icons {
-        position: fixed;
-        left: 0;
-        bottom: 1rem;
+main.navigation {
+    overflow: hidden;
+    .home, .contact, .about, .projects{
+        @include transition-ease;
+        transform:translateX(65%) scale(0.85);
+        opacity: 0.5;
+    }
+}
 
-        > a {
-            padding: 0.4rem;
-            @include transition-ease;
-
-            &:hover {
-                color: $secondary-color;
-            }
+.social-icons {
+    position: fixed;
+    left: 0;
+    bottom: 0.2rem;
+    
+    > a {
+        padding: 0.4rem;
+        font-size: 1.5rem;
+        @include transition-ease;
+       
+        &:hover {
+            color: $secondary-color;
         }
     }
 }
@@ -62,4 +73,7 @@ footer {
     padding: 1rem;
     font-size: 1rem;
     color: set-text-color($primary-color);
+}
+.d-none {
+    display: none;
 }
